guestbook/guestbook_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook
spec:
  replicas: 2
  selector:
    matchLabels:
      app: guestbook
  template:
    metadata:
      name: guestbook
      labels:
        app: guestbook
    spec:
      containers:
      - image: jaejinlee/cicd_guestbook:20230619094006_69
        name: sb-guestbook
