guestbook/guestbook_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-http
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: guestbook
